test_regress/t/t_property_pexpr_unsup.out
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:25:13: Unsupported: strong (in property expression)
   25 |       strong(a);
      |             ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:29:11: Unsupported: weak (in property expression)
   29 |       weak(a);
      |           ^
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:33:9: Unsupported: until (in property expression)
   33 |       a until b;
      |         ^~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:37:9: Unsupported: s_until (in property expression)
   37 |       a s_until b;
      |         ^~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:41:9: Unsupported: until_with (in property expression)
   41 |       a until_with b;
      |         ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:45:9: Unsupported: s_until_with (in property expression)
   45 |       a s_until_with b;
      |         ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:49:9: Unsupported: #-# (in property expression)
   49 |       a #-# b;
      |         ^~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:53:9: Unsupported: #=# (in property expression)
   53 |       a #=# b;
      |         ^~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:57:7: Unsupported: nexttime (in property expression)
   57 |       nexttime a;
      |       ^~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:61:7: Unsupported: nexttime[] (in property expression)
   61 |       nexttime [2] a;
      |       ^~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:65:7: Unsupported: s_nexttime (in property expression)
   65 |       s_nexttime a;
      |       ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:69:7: Unsupported: s_nexttime[] (in property expression)
   69 |       s_nexttime [2] a;
      |       ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:73:16: Unsupported: always (in property expression)
   73 |       nexttime always a;
      |                ^~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:73:7: Unsupported: nexttime (in property expression)
   73 |       nexttime always a;
      |       ^~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:77:20: Unsupported: always (in property expression)
   77 |       nexttime [2] always a;
      |                    ^~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:77:7: Unsupported: nexttime[] (in property expression)
   77 |       nexttime [2] always a;
      |       ^~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:81:20: Unsupported: always (in property expression)
   81 |       nexttime [2] always a;
      |                    ^~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:81:7: Unsupported: nexttime[] (in property expression)
   81 |       nexttime [2] always a;
      |       ^~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:85:16: Unsupported: s_eventually (in property expression)
   85 |       nexttime s_eventually a;
      |                ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:85:7: Unsupported: nexttime (in property expression)
   85 |       nexttime s_eventually a;
      |       ^~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:89:35: Unsupported: always (in property expression)
   89 |       nexttime s_eventually [2:$] always a;
      |                                   ^~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:89:16: Unsupported: s_eventually[] (in property expression)
   89 |       nexttime s_eventually [2:$] always a;
      |                ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:89:7: Unsupported: nexttime (in property expression)
   89 |       nexttime s_eventually [2:$] always a;
      |       ^~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:93:17: Unsupported: accept_on (in property expression)
   93 |       accept_on (a) b;
      |                 ^
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:97:22: Unsupported: sync_accept_on (in property expression)
   97 |       sync_accept_on (a) b;
      |                      ^
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:101:17: Unsupported: reject_on (in property expression)
  101 |       reject_on (a) b;
      |                 ^
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:105:22: Unsupported: sync_reject_on (in property expression)
  105 |       sync_reject_on (a) b;
      |                      ^
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:108:27: Unsupported: property argument data type
  108 |    property p_arg_propery(property inprop);
      |                           ^~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:111:27: Unsupported: sequence argument data type
  111 |    property p_arg_seqence(sequence inseq);
      |                           ^~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:116:7: Unsupported: property case expression
  116 |       case (a) endcase
      |       ^~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:119:7: Unsupported: property case expression
  119 |       case (a) default: b; endcase
      |       ^~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:122:7: Unsupported: property case expression
  122 |       if (a) b
      |       ^~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:125:7: Unsupported: property case expression
  125 |       if (a) b else c
      |       ^~
%Error: Exiting due to
